<resources>
    <string name="app_name">Badminton Spielbogen</string>
    <string name="heimverein">Heimverein</string>
    <string name="gastverein">Gastverein</string>
    <string name="staffel">Staffel</string>
    <string name="ort">Austragungsort</string>
    <string name="zeit">Spielbeginn</string>
    <string name="weiter">Weiter</string>
    <string name="hd1">1. Herrendoppel</string>
    <string name="hd2">2. Herrendoppel</string>
    <string name="dd">Damendoppel</string>
    <string name="he1">1. Herreneinzel</string>
    <string name="he2">2. Herreneinzel</string>
    <string name="he3">3. Herreneinzel</string>
    <string name="de">Dameneinzel</string>
    <string name="mx">Mixed</string>
    <string name="name">Spielername</string>
    <string name="save">Speichern</string>
    <string name="ergebnis">Ergebnisse eintragen</string>
    <string name="default_erg">0</string>
    <string name="title_activity_unterschrift">Unterschrift</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="sign">Unterschrift</string>
    <string name="delete">Löschen</string>
    <string name="aufstellungen">Mannschaftsaufstellungen</string>
    <string name="pdf">PDF Vorschau</string>
    <string name="end_spieltag">Spieltag abschließen</string>
    <string name="sign_heim">Unterschrift Heim</string>
    <string name="sign_gast">Unterschrift Gast</string>
    <string name="share">PDF verschicken</string>
    <string name="reset">Reset</string>
    <string name="load">Laden</string>
    <string name="kommentar">Kommentar</string>
    <string name="add_kommentar">Besondere Vorkommnisse</string>
    <string name="delete_file">Gespeicherte Spiele löschen</string>
    <string name="mail">E-Mail Adresse</string>
</resources>
